--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,12 +29,14 @@ set(LIB_HEADERS
     vm_utility.hxx
     vm_opcode.hxx
     vm_handler.hxx
+    vm_basic.hxx
 )
 set(LIB_SOURCES
     vm_base_types.cxx
     vm_utility.cxx
     vm_opcode.cxx
     vm_handler.cxx
+    vm_basic.cxx
 )
 add_library(${LIB_NAME} STATIC)
 target_sources(
