add handler stubs for RV32M extension

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LIB_HEADERS
     vm_interface.hxx
     vm_basic.hxx
     vm_handlers_rv32i.hxx
+    vm_handlers_rv32m.hxx
 )
 set(LIB_SOURCES
     vm_base_types.cxx
@@ -41,6 +42,7 @@ set(LIB_SOURCES
     vm_interface.cxx
     vm_basic.cxx
     vm_handlers_rv32i.cxx
+    vm_handlers_rv32m.cxx
 )
 add_library(${LIB_NAME} STATIC)
 target_sources(
