--- a/bin/build
+++ b/bin/build
@@ -5,7 +5,7 @@ CXX=riscv64-unknown-elf-g++
 OBJCOPY=riscv64-unknown-elf-objcopy
 OBJDUMP=riscv64-unknown-elf-objdump
 
-BUILD_FLAGS="-march=rv32i -mabi=ilp32 -mcmodel=medany -nostdlib"
+BUILD_FLAGS="-march=rv32im -mabi=ilp32 -mcmodel=medany -nostdlib"
 C_FLAGS=$BUILD_FLAGS
 CXX_FLAGS=$BUILD_FLAGS
 
