add view_hex_file utility

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,4 +35,17 @@ target_link_libraries(
         rvm
 )
 
-add_test(NAME "HEX parser" COMMAND test_hex_parser)
+add_test(NAME "HEX parser" COMMAND view_hex_file)
+
+add_executable(view_hex_file)
+target_sources(
+    view_hex_file
+    PRIVATE
+        view_hex_file.cxx
+)
+
+target_link_libraries(
+    view_hex_file
+    PRIVATE
+        rvm
+)
