add install targets for YetiVM libraries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,15 +5,14 @@ project(YetiVM LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include(YetiUtility)
+
 add_library(yeti_vm_shared INTERFACE)
-target_include_directories(
+add_include_dir(yeti_vm_shared INTERFACE)
+
+add_header_files(
     yeti_vm_shared
-    INTERFACE
-        ${CMAKE_CURRENT_LIST_DIR}
-)
-target_sources(
-    yeti_vm_shared
-    INTERFACE
+    INTERFACE HEADERS
         yeti-vm/vm_shared.hxx
 )
 add_library(YetiVM::shared ALIAS yeti_vm_shared)
@@ -46,24 +45,29 @@ target_sources(
     ${LIB_NAME}
     PRIVATE
         ${LIB_SOURCES}
-    PUBLIC
-        ${LIB_HEADERS}
+)
+add_header_files(
+    ${LIB_NAME}
+    PUBLIC HEADERS ${LIB_HEADERS}
 )
 target_link_libraries(
     ${LIB_NAME}
     PUBLIC
         YetiVM::shared
 )
+add_include_dir(${LIB_NAME} PUBLIC)
 add_library(YetiVM::runtime ALIAS ${LIB_NAME})
 
 set(LIB_BASIC_VM yeti_vm_basic)
 add_library(${LIB_BASIC_VM} STATIC)
 target_sources(
     ${LIB_BASIC_VM}
-    PUBLIC
-        yeti-vm/vm_basic.hxx
     PRIVATE
         yeti-vm/vm_basic.cxx
+)
+add_header_files(
+    ${LIB_BASIC_VM}
+    PUBLIC HEADERS yeti-vm/vm_basic.hxx
 )
 target_link_libraries(
     ${LIB_BASIC_VM}
@@ -71,3 +75,24 @@ target_link_libraries(
         YetiVM::runtime
 )
 add_library(YetiVM::basic_vm ALIAS ${LIB_BASIC_VM})
+
+include(GNUInstallDirs)
+
+# standard paths are used, so specifying 'DESTINATION ...' is not necessary
+install(TARGETS
+        yeti_vm_shared
+        yeti_vm_runtime
+        yeti_vm_basic
+        EXPORT YetiVMTargets
+        LIBRARY COMPONENT Runtime
+        RUNTIME COMPONENT Runtime
+        ARCHIVE COMPONENT Libraries
+#        PUBLIC_HEADER COMPONENT Headers # target_sources produce cmake error when add headers as PUBLIC files
+        FILE_SET HEADERS COMPONENT Headers
+        INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(EXPORT YetiVMTargets
+#        CONFIGURATIONS Debug Release
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/YetiVM
+)
