--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ project(Yeti LANGUAGES CXX
         DESCRIPTION "${YetiProject}"
 )
 
+#find_package(YetiProject REQUIRED)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
