move build options into top level CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,27 @@ project(Yeti LANGUAGES CXX
         DESCRIPTION "${YetiProject}"
 )
 
-#find_package(YetiProject REQUIRED)
+option(YETI_ENABLE_TESTS "Build tests" ON)
+option(YETI_ENABLE_TOOLS "Build tools" ON)
+option(YETI_ENABLE_EXAMPLES "Build examples" ON)
+option(YETI_ENABLE_INSTALL "Add install targets for libraries" ON)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-enable_testing()
-
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-add_subdirectory(examples)
+if(YETI_ENABLE_EXAMPLES)
+    add_subdirectory(examples)
+endif() # YETI_ENABLE_EXAMPLES
 
 add_subdirectory(src)
-add_subdirectory(tools)
-add_subdirectory(tests)
+
+if (YETI_ENABLE_TOOLS)
+    add_subdirectory(tools)
+endif() # YETI_ENABLE_TOOLS
+
+if(YETI_ENABLE_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif() # YETI_ENABLE_TESTS
