--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,12 +7,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(YetiUtility)
 
-add_library(yeti_vm_shared INTERFACE)
-add_include_dir(yeti_vm_shared INTERFACE)
+add_library(yeti_vm_shared STATIC)
+add_include_dir(yeti_vm_shared PUBLIC)
+
+target_sources(yeti_vm_shared
+    PRIVATE
+        yeti-vm/vm_shared.cxx
+)
 
 add_header_files(
     yeti_vm_shared
-    INTERFACE HEADERS
+    PUBLIC HEADERS
         yeti-vm/vm_shared.hxx
 )
 add_library(YetiVM::shared ALIAS yeti_vm_shared)
