add vm::bit_tools::bits to YetiVM::shared

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,12 +13,14 @@ add_include_dir(yeti_vm_shared PUBLIC)
 target_sources(yeti_vm_shared
     PRIVATE
         yeti-vm/vm_shared.cxx
+        yeti-vm/vm_bit_tools.cxx
 )
 
 add_header_files(
     yeti_vm_shared
     PUBLIC HEADERS
         yeti-vm/vm_shared.hxx
+        yeti-vm/vm_bit_tools.hxx
 )
 add_library(YetiVM::shared ALIAS yeti_vm_shared)
 
