test "RV32I handlers": Integer Register-Register instructions(OP / R-type) / add test stubs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -112,4 +112,5 @@ add_gtest(
         rv32i_handlers_load.cxx
         rv32i_handlers_store.cxx
         rv32i_handlers_integer_ri.cxx
+        rv32i_handlers_integer_rr.cxx
 )
