tests "RV32I handlers": add MISC_MEM / fence

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -113,4 +113,5 @@ add_gtest(
         rv32i_handlers_store.cxx
         rv32i_handlers_integer_ri.cxx
         rv32i_handlers_integer_rr.cxx
+        rv32i_handlers_misc_mem.cxx
 )
