--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -114,4 +114,5 @@ add_gtest(
         rv32i_handlers_integer_ri.cxx
         rv32i_handlers_integer_rr.cxx
         rv32i_handlers_misc_mem.cxx
+        rv32i_handlers_system.cxx
 )
